fix: minor styling issues with system light/dark modes

--- a/src/index.css
+++ b/src/index.css
@@ -58,16 +58,3 @@ button {
 .animate-wallpaper {
   animation: fadeIn 1s ease-in-out forwards;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
